name:                star-stream
version:             0.1.0.0
synopsis:            Starfield renderer
description:         Please see the README on GitHub at <https://github.com/lancelet/space-workshop#readme>
license:             Apache
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          j.s.merritt@gmail.com
copyright:           2019 Jonathan Merritt
category:            Graphics
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/lancelet/star-stream.git

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:       -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  exposed-modules:
      Catalog
    , HYG
    , Render
    , Star
  build-depends:
      base        >=4.11
    , attoparsec  >=0.13.2
    , JuicyPixels >=3.3.3
    , text        >=1.2.3

executable star-stream
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <5
  hs-source-dirs:      app
  default-language:    Haskell2010
