cabal-version:       >=1.10
name:                gaia-fetch
version:             0.1.0.0
synopsis:            Downloads Gaia mission star catalog.
license:             Apache-2.0
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          j.s.merritt@gmail.com
category:            Network
build-type:          Simple
extra-source-files:  CHANGELOG.md
description:
  Downloads Gaia mission star catalog. Gaia is a space observatory launched by
  the European Space Agency (ESA) in 2013. The second data release from the
  mission, called GDR2, was made public on 25 April 2018. The star catalog
  component of GDR2 consists of a set of GZipped CSV files, stored on an ESA
  server, comprising a total of ~588 GB of compressed data. This package
  contains functionality to download these files and check them against an MD5
  manifest.

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     GaiaFetch
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  build-depends:
      base               >=4.12 && <4.13
    , attoparsec         >=0.13.2.2
    , base16-bytestring  >=0.1.1.6
    , bytestring         >=0.10.8.2
    , conduit            >=1.3.1.1
    , cryptonite         >=0.25
    , cryptonite-conduit >=0.2.2
    , directory          >=1.3.3.0
    , mtl                >=2.2.2
    , parallel-io        >=0.3.3
    , req                >=2.0.1
    , req-conduit        >=1.0.0
    , retry              >=0.8.0.1
    , safe-exceptions    >=0.1.7.0
    , text               >=1.2.3.1

test-suite tests
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Test.hs
  build-depends:
     base
   , gaia-fetch
   , doctest >=0.16.0.1
   , tasty   >=1.2.2

executable gaia-fetch
  main-is:             Main.hs
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  build-depends:
      base >=4.12 && <4.13
    , gaia-fetch
    , directory            >=1.3.3.0
    , optparse-applicative >=0.14.3.0