name:                star-render
version:             0.1.0.0
synopsis:            Starfield renderer
description:         Please see the README on GitHub at <https://github.com/lancelet/space-workshop#readme>
license:             Apache
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          j.s.merritt@gmail.com
copyright:           2019 Jonathan Merritt
category:            Graphics
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/lancelet/star-stream.git

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:       -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  exposed-modules:
      Catalog
    , HYG
    , Render
    , Star
  build-depends:
      base               >=4.11
    , attoparsec         >=0.13.2
    , base16-bytestring  >=0.1.1.6
    , bytestring         >=0.10.8.2
    , cryptonite         >=0.25
    , directory          >=1.3.3.0
    , hourglass          >=0.2.12
    , JuicyPixels        >=3.3.3
    , monad-parallel     >=0.7.2.3
    , req                >=2.0.1
    , safe-exceptions    >=0.1.7.0
    , tagsoup            >=0.14.8
    , text               >=1.2.3

executable star-stream
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <5
  hs-source-dirs:      app
  default-language:    Haskell2010
