name:                star-render
version:             0.1.0.0
synopsis:            Starfield renderer
description:         Please see the README on GitHub at <https://github.com/lancelet/space-workshop#readme>
license:             Apache
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          j.s.merritt@gmail.com
copyright:           2019 Jonathan Merritt
category:            Graphics
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/lancelet/star-stream.git

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  ghc-options:       -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  exposed-modules:
      Catalog
    , FluxWholeSky
    , Gaia.CSVParser
    , Gaia.RowFile
    , Gaia.Types
    , HYG
    , Image
    , Render
    , Star
  build-depends:
      base               >=4.11
    , attoparsec         >=0.13.2
    , base16-bytestring  >=0.1.1.6
    , binary             >=0.8.6.0
    , bytestring         >=0.10.8.2
    , cryptonite         >=0.25
    , deepseq            >=1.4.4.0
    , directory          >=1.3.3.0
    , ghc-compact        >=0.1.0.0
    , hourglass          >=0.2.12
    , JuicyPixels        >=3.3.3
    , monad-parallel     >=0.7.2.3
    , parallel-io        >=0.3.3
    , primitive          >=0.6.4.0
    , req                >=2.0.1
    , safe-exceptions    >=0.1.7.0
    , split              >=0.2.3.3
    , tagsoup            >=0.14.8
    , text               >=1.2.3
    , vector             >=0.12.0.3
    , vector-th-unbox    >=0.2.1.6
    , zlib               >=0.6.2

executable star-stream
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.11 && <5
  hs-source-dirs:      app
  default-language:    Haskell2010

executable test-flux-whole-sky
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  ghc-options:         -O2 -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists -threaded -rtsopts "-with-rtsopts=-N10"
  hs-source-dirs:      app/test-flux-whole-sky
  default-language:    Haskell2010
  build-depends:
      base >=4.11 && <5
    , star-render
           